[gd_scene load_steps=12 format=2]

[ext_resource path="res://Map/scene_transition.tscn" type="PackedScene" id=1]
[ext_resource path="res://rooms/essential.tscn" type="PackedScene" id=2]
[ext_resource path="res://Map/floors/Floor.tscn" type="PackedScene" id=3]
[ext_resource path="res://rooms/room.gd" type="Script" id=4]
[ext_resource path="res://torcch.gd" type="Script" id=5]
[ext_resource path="res://rooms/waypoints/waypoint.tscn" type="PackedScene" id=6]
[ext_resource path="res://res/Mountain_Night.png" type="Texture2D" id=7]
[ext_resource path="res://editor/bundle.gd" type="Script" id=8]
[ext_resource path="res://torcch.tscn" type="PackedScene" id=9]
[ext_resource path="res://rooms/mountains/bounds.gd" type="Script" id=10]
[ext_resource path="res://rooms/mountains/bound_element.gd" type="Script" id=11]

[node name="Node2D" type="Node2D"]
script = ExtResource( 4 )
room_width = 160.274
room_height = 91.245
room_x = 155.166
room_y = 87.1478
spawn = 1
area_name = "going_down"

[node name="Mountain_Night" type="Sprite2D" parent="."]
position = Vector2( 39.3774, 38.2019 )
texture = ExtResource( 7 )

[node name="Piso" parent="." instance=ExtResource( 3 )]
position = Vector2( 23, 49.5 )

[node name="Piso10" parent="." instance=ExtResource( 3 )]
position = Vector2( -11.8972, 49.5 )

[node name="Piso2" parent="." instance=ExtResource( 3 )]
position = Vector2( 55, 62 )

[node name="Piso3" parent="." instance=ExtResource( 3 )]
position = Vector2( 87, 74.5 )

[node name="Piso4" parent="." instance=ExtResource( 3 )]
position = Vector2( 120, 88 )

[node name="Piso5" parent="." instance=ExtResource( 3 )]
position = Vector2( 153.5, 101 )

[node name="Piso6" parent="." instance=ExtResource( 3 )]
position = Vector2( 185, 114.5 )

[node name="Piso7" parent="." instance=ExtResource( 3 )]
position = Vector2( 216.5, 128 )

[node name="Piso8" parent="." instance=ExtResource( 3 )]
position = Vector2( 248.5, 141 )

[node name="Piso9" parent="." instance=ExtResource( 3 )]
position = Vector2( 295.5, 141 )

[node name="Node2D" parent="." instance=ExtResource( 2 )]

[node name="Node2D3" type="Node2D" parent="."]
position = Vector2( 126.331, 20.6044 )
script = ExtResource( 8 )
instances = 3
d_x = 50
d_y = 30
rand_x = 20
rand_y = 40
path = ExtResource( 9 )
dx = [ 2, 15, 16 ]
dy = [ 13, 19, 15 ]

[node name="Node2D" type="Node2D" parent="Node2D3" instance=ExtResource( 9 )]
use_parent_material = true
position = Vector2( 2, 13 )
script = ExtResource( 5 )

[node name="Node2D2" type="Node2D" parent="Node2D3" instance=ExtResource( 9 )]
use_parent_material = true
position = Vector2( 65, 49 )
script = ExtResource( 5 )

[node name="Node2D3" type="Node2D" parent="Node2D3" instance=ExtResource( 9 )]
use_parent_material = true
position = Vector2( 116, 75 )
script = ExtResource( 5 )

[node name="path1" parent="." instance=ExtResource( 1 )]
position = Vector2( -45.6917, 32.9631 )
scene = "main_test"

[node name="waypoint1" parent="path1" instance=ExtResource( 6 )]
position = Vector2( 29.6917, 1.0369 )
point = Color( 0, 1, 0, 1 )

[node name="path2" parent="." instance=ExtResource( 1 )]
position = Vector2( 329.31, 125.066 )
scene = "Main"

[node name="wayppoint2" parent="path2" instance=ExtResource( 6 )]
position = Vector2( -27.31, -1.066 )
point = Color( 1, 0, 0, 1 )

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color( 0.270588, 0.352941, 0.556863, 1 )

[node name="bounds" type="Node2D" parent="."]
modulate = Color( 1, 1, 1, 0.45098 )
script = ExtResource( 10 )
bound_color = Color( 0.862745, 0.258824, 0.0470588, 1 )

[node name="bound_x" type="Node2D" parent="bounds"]
position = Vector2( -4.83426, -190.942 )
script = ExtResource( 11 )

[node name="bound_y" type="Node2D" parent="bounds"]
position = Vector2( 124.132, -2.85221 )
script = ExtResource( 11 )

[node name="bound_width" type="Node2D" parent="bounds"]
position = Vector2( 320.274, -1.85969 )
script = ExtResource( 11 )

[node name="bound_height" type="Node2D" parent="bounds"]
position = Vector2( 131.941, 181.245 )
script = ExtResource( 11 )
